--- a/package.json
+++ b/package.json
@@ -5,21 +5,31 @@
   "type": "module",
   "scripts": {
     "dev": "node server",
+    "dev:vite": "vite dev",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build --ssrManifest --outDir dist/client",
     "build:server": "vite build --ssr src/entry-server.js --outDir dist/server",
     "preview": "cross-env NODE_ENV=production node server"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.687.0",
+    "amqplib": "^0.10.4",
     "compression": "^1.7.4",
+    "dotenv": "^16.4.5",
     "express": "^5.0.1",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "sirv": "^3.0.0",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "@aws-sdk/credential-provider-node": "^3.687.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "cross-env": "^7.0.3",
+    "nodemailer": "^6.9.16",
     "vite": "^5.4.9",
     "vite-plugin-vue-devtools": "^7.6.3"
   }
